--- a/ng_values_dockercfg.yaml
+++ b/ng_values_dockercfg.yaml
@@ -1,11 +1,11 @@
 name: bluegreendemo
 replicas: 2
 
-image: ${artifact.images}
-dockercfg: ${artifact.imagePullSecrets}
+image: ${artifact.metadata.image}
+dockercfg: ${artifact.source.dockerconfig}
 
 createNamespace: true
-namespace: ${infra.namespace}
+namespace: ${serviceVariable.namespace}
 
 # Service Type allow you to specify what kind of service you want.
 # Possible values for ServiceType are:
