--- a/ng_values_dockercfg.yaml
+++ b/ng_values_dockercfg.yaml
@@ -1,8 +1,8 @@
 name: bluegreendemo
 replicas: 2
 
-image: <+artifact.images>
-dockercfg: <+artifact.imagePullSecrets>
+image: <+artifact.image>
+dockercfg: <+artifact.imagePullSecret>
 
 createNamespace: true
 namespace: <+infra.namespace>
